refactor: 지원서 업데이트 로직 수정